--- a/team7_Airline-Satisfaction-Prediction-Updated.ipynb
+++ b/team7_Airline-Satisfaction-Prediction-Updated.ipynb
@@ -2233,8 +2233,8 @@
    "id": "4a5ca653",
    "metadata": {},
    "source": [
-    "# Get training job name and metrics\n",
-    "Training job name and metrics like RMSE are retrieved for evaluation."
+    "# Get training job name\n",
+    "Training job name."
    ]
   },
   {
@@ -2256,76 +2256,6 @@
    ],
    "source": [
     "xgboost_model._current_job_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "a0c43178-484a-4a1c-a8ac-76d715a46be7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "metrics = sagemaker.analytics.TrainingJobAnalytics(\n",
-    "    xgboost_model._current_job_name,\n",
-    "    metric_names=['train:rmse', 'validation:rmse']\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "814beb55-c0bb-46cb-9422-481e27bfea54",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:sagemaker.analytics:Warning: No metrics called train:rmse found\n",
-      "WARNING:sagemaker.analytics:Warning: No metrics called validation:rmse found\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "metrics.dataframe()"
    ]
   },
   {
